--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -194,7 +194,7 @@ ja:
       long: ! '%Y年%m月%d日(%a) %H時%M分%S秒 %z'
       short: ! '%y/%m/%d %H:%M'
     pm: 午後
-  action:
+  controller:
     index: 一覧
     show: 詳細
     new: 新規作成
