Add Textarea to form_model

--- a/config/locales/activerecord.ja.yml
+++ b/config/locales/activerecord.ja.yml
@@ -8,6 +8,7 @@ ja:
         help_text: 補足文
         checkbox: チェックボックス
         number_field: 数値入力
+        textarea: テキストエリア
     attributes:
       template:
         id: テンプレート番号
