--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -23,3 +23,4 @@ en:
   hello: "Hello world"
   message:
     delete_confirm: "Are you sure you want to delete?"
+    apply_confirm: "Discarded unsaved data, are you sure?"
